frontend/test/should_pass/exectype_AssignConstToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(z=foo::Bar);
	}
}