frontend/test/should_fail/exectype_AssignMapCreationToVar.grg
using exectype;

rule r
{
	modify  {
		exec(m:map<A,H> =map<A,HH>);
	}
}